--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-  <title>Mobile Portrait Game UI</title>
-  <meta name="theme-color" content="#f6f8fb" />
+  <title>Mobile Portrait Game UI — Taupe Theme</title>
+  <meta name="theme-color" content="#d4c6b9" />
   <style>
     /*
-      Sleek, modern, soft/light UI for a portrait mobile web game
+      Taupe / Cream / Dark Brown theme
       – Single-file HTML/CSS/JS (GitHub Pages friendly)
-      – Update colors in :root to reskin
+      – Portrait-first, fixed 9:16 frame on any device
     */
 
     :root {
-      /* Soft, airy palette */
-      --bg: #f6f8fb;              /* App background */
-      --surface: #ffffff;          /* Cards / tiles */
-      --muted: #eef2f8;            /* Subtle fills */
-      --line: rgba(31, 42, 68, 0.08);   /* Hairline borders */
-      --text: #1f2a44;             /* Primary text */
-      --subtle-text: #6b7280;      /* Secondary text */
-      --primary: #7aa7ff;          /* Accent */
-      --primary-press: #6a96ee;    /* Pressed accent */
-      --shadow-elev: 0 12px 36px rgba(31, 42, 68, 0.08);
-      --shadow-soft: 0 8px 24px rgba(31, 42, 68, 0.06);
+      /* Palette */
+      --bg: #d4c6b9;                /* taupe background (darker) */
+      --bg-2: #cfc2b6;              /* darker mid taupe for gradient */
+      --surface: #fbf6ec;           /* cream surfaces (tiles, cards) */
+      --muted: #f3eadc;             /* subtle fills */
+      --line: rgba(74, 50, 36, 0.18);  /* hairline borders (dark brown, soft) */
+      --text: #4a3224;              /* dark brown text */
+      --subtle-text: #6d5342;       /* secondary text */
+      --primary: #6b4e3a;           /* brown highlight */
+      --primary-press: #5c4333;     /* pressed brown */
+      --shadow-elev: 0 12px 36px rgba(74, 50, 36, 0.08);
+      --shadow-soft: 0 8px 24px rgba(74, 50, 36, 0.06);
       --radius-lg: 18px;
       --radius-md: 16px;
       --gap: 14px;
@@ -33,25 +34,30 @@
 
     html, body { height: 100%; }
 
-    body {
+    html, body {
       margin: 0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color: var(--text);
-      background: linear-gradient(180deg, #f7faff 0%, #fbfdff 50%, #ffffff 100%);
+      background: linear-gradient(180deg, var(--bg) 0%, var(--bg-2) 50%, #fff 100%);
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
+      min-height: 100dvh;             /* fill viewport */
+      display: grid;                  /* center the portrait frame */
+      place-items: center;
+      padding: env(safe-area-inset-top) 0 env(safe-area-inset-bottom);
     }
 
     /* Root app layout: small top, large middle, small bottom */
     .app {
-      min-height: 100dvh;                /* modern mobile viewport */
-      height: var(--app-height, 100dvh); /* JS fallback for iOS */
+      /* Portrait frame that keeps a 9:16 aspect on ANY device */
+      width: min(100vw, 56.25vh);   /* 56.25% of height = 9:16 */
+      aspect-ratio: 9 / 16;         /* enforce portrait ratio */
+
       display: grid;
-      grid-template-rows: 56px 1fr 128px;  /* small / large / small */
-      gap: var(--gap);
-      padding: env(safe-area-inset-top) 16px env(safe-area-inset-bottom);
-      max-width: 520px;
-      margin: 0 auto;
+      grid-template-rows: 52px 1fr minmax(120px, 20vh);  /* tighter top, flexible bottom */
+      gap: 10px;                    /* tighter gaps */
+      padding: 10px 14px;           /* slightly tighter gutter */
+      margin: 0 auto;               /* horizontal center */
     }
 
     /* TOP: slim status/header */
@@ -71,12 +77,12 @@
     }
     .brand .dot {
       width: 10px; height: 10px; border-radius: 50%;
-      background: radial-gradient(120% 120% at 50% 10%, #cfe0ff 0%, #7aa7ff 100%);
-      box-shadow: 0 0 0 4px rgba(122, 167, 255, 0.15);
+      background: radial-gradient(120% 120% at 50% 10%, #e9dccd 0%, #6b4e3a 100%);
+      box-shadow: 0 0 0 4px rgba(107, 78, 58, 0.18);
     }
     .stats { display: flex; gap: 12px; align-items: center; color: var(--subtle-text); font-size: 13px; }
     .pill {
-      background: linear-gradient(180deg, #f9fbff 0%, #ffffff 100%);
+      background: linear-gradient(180deg, #fcf8f0 0%, #fff 100%);
       border: 1px solid var(--line);
       border-radius: 999px;
       padding: 6px 10px;
@@ -85,12 +91,25 @@
     .pill svg { opacity: 0.7; }
 
     /* MIDDLE: big area with centered 3x3 board */
-    .middle {
-      display: grid; place-items: center;
+    .middle { display: grid; place-items: center; }
+
+
+    /* Stack around the board: slim sections above and below */
+    .board-stack {
+      width: 100%;
+      display: grid;
+      grid-template-rows: 18px 1fr 18px; /* slimmer strips */
+      gap: 8px;
+    }
+    .strip {
+      background: var(--surface);
+      border: 1px solid var(--line);
+      border-radius: var(--radius-md);
+      box-shadow: var(--shadow-soft);
     }
 
     .board {
-      width: min(92vw, 460px);
+      width: 100%;
       aspect-ratio: 1 / 1; /* perfect square */
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -100,7 +119,7 @@
 
     .cell {
       position: relative;
-      background: linear-gradient(180deg, #ffffff 0%, #f8faff 100%);
+      background: linear-gradient(180deg, #fffaf0 0%, var(--surface) 100%); /* cream */
       border: 1px solid var(--line);
       border-radius: var(--radius-md);
       box-shadow: var(--shadow-elev);
@@ -111,14 +130,14 @@
       transition: transform 80ms ease, box-shadow 240ms ease, border-color 240ms ease, background-color 240ms ease;
       overflow: hidden;
     }
-    .cell:active { transform: scale(0.985); box-shadow: 0 10px 28px rgba(31, 42, 68, 0.08); }
-    .cell.--glow { border-color: rgba(122, 167, 255, 0.85); box-shadow: 0 14px 40px rgba(122, 167, 255, 0.34); }
+    .cell:active { transform: scale(0.985); box-shadow: 0 10px 28px rgba(74, 50, 36, 0.08); }
+    .cell.--glow { border-color: rgba(107, 78, 58, 0.85); box-shadow: 0 14px 40px rgba(107, 78, 58, 0.26); }
 
     /* Subtle inner shine */
     .cell::before {
       content: "";
       position: absolute; inset: 0;
-      background: radial-gradient(120% 120% at 50% 0%, rgba(122,167,255,0.12) 0%, rgba(122,167,255,0.06) 35%, rgba(122,167,255,0) 60%);
+      background: radial-gradient(120% 120% at 50% 0%, rgba(107, 78, 58, 0.12) 0%, rgba(107, 78, 58, 0.06) 35%, rgba(107, 78, 58, 0) 60%);
       pointer-events: none;
       opacity: 0.8;
     }
@@ -128,22 +147,23 @@
       display: grid;
       grid-template-columns: 1fr auto 1fr;
       align-items: center;
-      gap: 12px;
+      gap: 10px;
+      padding: 0; /* keep tight so the button isn't pushed down */
     }
     .hint { color: var(--subtle-text); font-size: 12px; opacity: 0.85; }
 
     .action-wrap { display: grid; place-items: center; }
 
     .action-btn {
-      --size: 92px;
+      --size: clamp(96px, 14vmin, 132px); /* large but safer in the footer */
       width: var(--size);
       height: var(--size);
       border-radius: 50%;
       border: 1px solid var(--line);
       background:
-        radial-gradient(120% 120% at 50% 0%, #eaf2ff 0%, #ffffff 70%) padding-box,
-        conic-gradient(from 180deg, rgba(122,167,255,0.12), rgba(122,167,255,0.24), rgba(122,167,255,0.12)) border-box;
-      box-shadow: 0 14px 38px rgba(122, 167, 255, 0.28), var(--shadow-soft);
+        radial-gradient(120% 120% at 50% 0%, #f6eee2 0%, #fff 70%) padding-box,
+        conic-gradient(from 180deg, rgba(107,78,58,0.12), rgba(107,78,58,0.24), rgba(107,78,58,0.12)) border-box;
+      box-shadow: 0 26px 68px rgba(74, 50, 36, 0.38), 0 12px 32px rgba(107, 78, 58, 0.20);
       display: grid; place-items: center;
       font-weight: 700; letter-spacing: 0.4px; color: var(--text);
       cursor: pointer;
@@ -151,30 +171,33 @@
       -webkit-tap-highlight-color: transparent;
       transition: transform 80ms ease, box-shadow 240ms ease;
     }
-    .action-btn:active { transform: translateY(1px) scale(0.99); box-shadow: 0 10px 28px rgba(122, 167, 255, 0.22), var(--shadow-soft); }
-    .action-btn:focus-visible { outline: 3px solid rgba(122,167,255,0.35); outline-offset: 4px; }
+    .action-btn:active { transform: translateY(1px) scale(0.99); box-shadow: 0 10px 28px rgba(107, 78, 58, 0.18), var(--shadow-soft); }
+    .action-btn:focus-visible { outline: 3px solid rgba(107, 78, 58, 0.35); outline-offset: 4px; }
 
     /* Ripple effect element */
     .ripple {
       position: absolute; border-radius: 50%; transform: scale(0);
-      background: rgba(122, 167, 255, 0.22);
+      background: rgba(107, 78, 58, 0.22);
       animation: ripple 550ms ease-out; pointer-events: none;
     }
     @keyframes ripple { to { transform: scale(3.2); opacity: 0; } }
 
-    /* Orientation guard: nudge users back to portrait */
+    /* Orientation guard: nudge users back to portrait (phones only) */
     .rotate-overlay {
       position: fixed; inset: 0; display: none;
-      background: rgba(255,255,255,0.92);
+      background: rgba(255,255,255,0.9);
       backdrop-filter: blur(3px);
       z-index: 50; color: var(--text);
       align-items: center; justify-content: center;
       text-align: center; padding: 32px;
     }
-    @media (orientation: landscape) { .rotate-overlay { display: flex; } }
+    @media (orientation: landscape) and (max-width: 768px) { .rotate-overlay { display: flex; } }
 
     /* Tiny helper icons */
     .icon { width: 16px; height: 16px; }
+
+    /* Screen-reader only utility */
+    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; }
 
     /* Safe tappable areas */
     button { border: 0; background: none; }
@@ -202,17 +225,21 @@
 
     <!-- Middle: centered 3x3 grid board -->
     <main class="middle" aria-label="Game board">
-      <section class="board" aria-label="3 by 3 grid">
-        <button class="cell" aria-label="Cell 1"></button>
-        <button class="cell" aria-label="Cell 2"></button>
-        <button class="cell" aria-label="Cell 3"></button>
-        <button class="cell" aria-label="Cell 4"></button>
-        <button class="cell" aria-label="Cell 5"></button>
-        <button class="cell" aria-label="Cell 6"></button>
-        <button class="cell" aria-label="Cell 7"></button>
-        <button class="cell" aria-label="Cell 8"></button>
-        <button class="cell" aria-label="Cell 9"></button>
-      </section>
+      <div class="board-stack" aria-label="Board stack">
+        <div class="strip strip--top" aria-hidden="true"></div>
+        <section class="board" aria-label="3 by 3 grid">
+          <button class="cell" aria-label="Cell 1"></button>
+          <button class="cell" aria-label="Cell 2"></button>
+          <button class="cell" aria-label="Cell 3"></button>
+          <button class="cell" aria-label="Cell 4"></button>
+          <button class="cell" aria-label="Cell 5"></button>
+          <button class="cell" aria-label="Cell 6"></button>
+          <button class="cell" aria-label="Cell 7"></button>
+          <button class="cell" aria-label="Cell 8"></button>
+          <button class="cell" aria-label="Cell 9"></button>
+        </section>
+        <div class="strip strip--bottom" aria-hidden="true"></div>
+      </div>
     </main>
 
     <!-- Bottom: small bar with prominent round button -->
@@ -221,7 +248,6 @@
       <div class="action-wrap">
         <button class="action-btn" id="primaryAction" aria-label="Primary action">
           <span class="sr-only">Primary Action</span>
-          START
         </button>
       </div>
       <div class="hint" style="justify-self:end">Hold for boost</div>
@@ -238,12 +264,6 @@
   </div>
 
   <script>
-    // iOS 100vh fix (sets --app-height) & safe resize
-    function setAppHeight() { document.documentElement.style.setProperty('--app-height', window.innerHeight + 'px'); }
-    window.addEventListener('resize', setAppHeight);
-    window.addEventListener('orientationchange', setAppHeight);
-    setAppHeight();
-
     // Minimal interactivity examples (replace with your game logic)
     const cells = Array.from(document.querySelectorAll('.cell'));
 
